# dcmtk

./: .gitignore
CMake/: 3rdparty.cmake
config/: Makefile.def.in  configure
dcmdata/data/: dicom.dic  private.dic
dcmdata/include/dcmtk/dcmdata/: dcdeftag.h  dcelem.h
dcmdata/libsrc/: CMakeLists.txt  Makefile.in  dcdictbi.cc  dcdictzz.cc  dctag.cc  mkdeftag.cc  mkdictbi.cc
dcmimage/include/dcmtk/dcmimage/: dicoflt.h  dicorot.h
dcmimgle/include/dcmtk/dcmimgle/: diflipt.h  dirotat.h  discalet.h
dcmrt/libsrc/: drtmas.cc
